--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -75,7 +75,7 @@
       </article>
     </main>
     <footer>
-      <p>&SAMURAIニュース</p>
+      <p>&copy;SAMURAIニュース</p>
     </footer>
 </body>
 </html>
